tdf#164623: handle negative rotations

Change-Id: I35dd1ecda0754639b8e511532af24ef7e0d0935b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185610
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Tested-by: Jenkins
(cherry picked from commit bb08f8463bc00f8a6ef20cf21d29c985f64e8654)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185628
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>